[gd_scene load_steps=15 format=3 uid="uid://jmqom6qsejyo"]

[ext_resource type="Script" path="res://scripts/mains.gd" id="1_1s41a"]
[ext_resource type="Script" path="res://scripts/PlayableAreaCollision.gd" id="3_7pkmi"]
[ext_resource type="PackedScene" uid="uid://tkhkinj6x1va" path="res://scenes/objects/pool_table.tscn" id="3_8ne0i"]
[ext_resource type="Script" path="res://scripts/ballArrays.gd" id="4_7f1v5"]
[ext_resource type="PackedScene" uid="uid://sp1w1csj6psn" path="res://scenes/objects/ball.tscn" id="4_lnexn"]
[ext_resource type="Script" path="res://scripts/CueBall.gd" id="5_0d3vu"]
[ext_resource type="Script" path="res://scripts/CueComponent.gd" id="5_e2yek"]
[ext_resource type="Script" path="res://scripts/HoleCollision.gd" id="5_rf0n2"]
[ext_resource type="PackedScene" uid="uid://cf3nybk3xcitt" path="res://resources/meshes/palo_pool.gltf" id="10_j1a6t"]
[ext_resource type="Script" path="res://scripts/TurnComponent.gd" id="12_wiqqh"]
[ext_resource type="Script" path="res://scripts/GUIComponent.gd" id="13_syd34"]

[sub_resource type="HeightMapShape3D" id="HeightMapShape3D_gydyj"]
map_width = 16
map_depth = 16
map_data = PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="SphereShape3D" id="SphereShape3D_63gom"]
custom_solver_bias = 0.025
radius = 0.05

[sub_resource type="ArrayMesh" id="ArrayMesh_3b3xh"]
_surfaces = [{
"aabb": AABB(-0.027633, -0.029055, -0.029055, 0.055266, 0.05811, 0.05811),
"attribute_data": PackedByteArray(46, 58, 215, 235, 139, 46, 255, 255, 232, 34, 215, 235, 116, 81, 215, 235, 209, 69, 175, 215, 22, 93, 175, 215, 92, 244, 215, 235, 185, 232, 255, 255, 22, 221, 215, 235, 208, 197, 215, 235, 45, 186, 255, 255, 138, 174, 215, 235, 69, 151, 215, 235, 162, 139, 255, 255, 255, 127, 215, 235, 22, 93, 175, 215, 209, 69, 175, 215, 116, 81, 136, 195, 139, 46, 175, 215, 69, 23, 175, 215, 232, 34, 136, 195, 185, 232, 175, 215, 115, 209, 175, 215, 22, 221, 136, 195, 45, 186, 175, 215, 232, 162, 175, 215, 138, 174, 136, 195, 162, 139, 175, 215, 92, 116, 175, 215, 255, 127, 136, 195, 116, 81, 136, 195, 209, 69, 175, 215, 46, 58, 136, 195, 232, 34, 136, 195, 69, 23, 175, 215, 162, 11, 136, 195, 22, 221, 136, 195, 115, 209, 175, 215, 208, 197, 136, 195, 138, 174, 136, 195, 232, 162, 175, 215, 69, 151, 136, 195, 255, 127, 136, 195, 92, 116, 175, 215, 185, 104, 136, 195, 209, 69, 96, 175, 139, 46, 96, 175, 46, 58, 57, 155, 69, 23, 96, 175, 0, 0, 96, 175, 162, 11, 57, 155, 115, 209, 96, 175, 45, 186, 96, 175, 208, 197, 57, 155, 232, 162, 96, 175, 162, 139, 96, 175, 69, 151, 57, 155, 92, 116, 96, 175, 22, 93, 96, 175, 185, 104, 57, 155, 255, 127, 57, 155, 185, 104, 57, 155, 92, 116, 17, 135, 92, 116, 96, 175, 185, 104, 57, 155, 255, 127, 57, 155, 162, 139, 96, 175, 92, 116, 96, 175, 255, 127, 57, 155, 138, 174, 57, 155, 69, 151, 57, 155, 232, 162, 17, 135, 232, 162, 96, 175, 69, 151, 57, 155, 138, 174, 57, 155, 45, 186, 96, 175, 232, 162, 96, 175, 138, 174, 57, 155, 22, 221, 57, 155, 208, 197, 57, 155, 115, 209, 17, 135, 115, 209, 96, 175, 208, 197, 57, 155, 22, 221, 57, 155, 185, 232, 96, 175, 115, 209, 96, 175, 22, 221, 57, 155, 232, 34, 57, 155, 162, 11, 57, 155, 69, 23, 17, 135, 69, 23, 96, 175, 162, 11, 57, 155, 232, 34, 57, 155, 139, 46, 96, 175, 69, 23, 96, 175, 232, 34, 57, 155, 116, 81, 57, 155, 46, 58, 57, 155, 209, 69, 17, 135, 209, 69, 96, 175, 46, 58, 57, 155, 116, 81, 57, 155, 22, 93, 96, 175, 209, 69, 96, 175, 116, 81, 57, 155, 92, 116, 96, 175, 185, 104, 136, 195, 22, 93, 96, 175, 255, 127, 136, 195, 185, 104, 136, 195, 92, 116, 96, 175, 162, 139, 96, 175, 255, 127, 136, 195, 92, 116, 96, 175, 232, 162, 96, 175, 69, 151, 136, 195, 162, 139, 96, 175, 138, 174, 136, 195, 69, 151, 136, 195, 232, 162, 96, 175, 45, 186, 96, 175, 138, 174, 136, 195, 232, 162, 96, 175, 115, 209, 96, 175, 208, 197, 136, 195, 45, 186, 96, 175, 22, 221, 136, 195, 208, 197, 136, 195, 115, 209, 96, 175, 185, 232, 96, 175, 22, 221, 136, 195, 115, 209, 96, 175, 69, 23, 96, 175, 162, 11, 136, 195, 0, 0, 96, 175, 232, 34, 136, 195, 162, 11, 136, 195, 69, 23, 96, 175, 139, 46, 96, 175, 232, 34, 136, 195, 69, 23, 96, 175, 209, 69, 96, 175, 46, 58, 136, 195, 139, 46, 96, 175, 116, 81, 136, 195, 46, 58, 136, 195, 209, 69, 96, 175, 22, 93, 96, 175, 116, 81, 136, 195, 209, 69, 96, 175, 69, 151, 136, 195, 255, 127, 136, 195, 162, 139, 96, 175, 162, 139, 175, 215, 255, 127, 136, 195, 69, 151, 136, 195, 232, 162, 175, 215, 162, 139, 175, 215, 69, 151, 136, 195, 208, 197, 136, 195, 138, 174, 136, 195, 45, 186, 96, 175, 45, 186, 175, 215, 138, 174, 136, 195, 208, 197, 136, 195, 115, 209, 175, 215, 45, 186, 175, 215, 208, 197, 136, 195, 92, 244, 136, 195, 22, 221, 136, 195, 185, 232, 96, 175, 185, 232, 175, 215, 22, 221, 136, 195, 92, 244, 136, 195, 255, 255, 175, 215, 185, 232, 175, 215, 92, 244, 136, 195, 46, 58, 136, 195, 232, 34, 136, 195, 139, 46, 96, 175, 139, 46, 175, 215, 232, 34, 136, 195, 46, 58, 136, 195, 209, 69, 175, 215, 139, 46, 175, 215, 46, 58, 136, 195, 185, 104, 136, 195, 116, 81, 136, 195, 22, 93, 96, 175, 22, 93, 175, 215, 116, 81, 136, 195, 185, 104, 136, 195, 92, 116, 175, 215, 22, 93, 175, 215, 185, 104, 136, 195, 162, 139, 175, 215, 255, 127, 215, 235, 92, 116, 175, 215, 69, 151, 215, 235, 255, 127, 215, 235, 162, 139, 175, 215, 232, 162, 175, 215, 69, 151, 215, 235, 162, 139, 175, 215, 45, 186, 175, 215, 138, 174, 215, 235, 232, 162, 175, 215, 208, 197, 215, 235, 138, 174, 215, 235, 45, 186, 175, 215, 115, 209, 175, 215, 208, 197, 215, 235, 45, 186, 175, 215, 185, 232, 175, 215, 22, 221, 215, 235, 115, 209, 175, 215, 92, 244, 215, 235, 22, 221, 215, 235, 185, 232, 175, 215, 255, 255, 175, 215, 92, 244, 215, 235, 185, 232, 175, 215, 185, 104, 215, 235, 22, 93, 175, 215, 92, 116, 175, 215, 116, 81, 215, 235, 22, 93, 175, 215, 185, 104, 215, 235, 22, 93, 255, 255, 116, 81, 215, 235, 185, 104, 215, 235, 139, 46, 175, 215, 232, 34, 215, 235, 69, 23, 175, 215, 46, 58, 215, 235, 232, 34, 215, 235, 139, 46, 175, 215, 209, 69, 175, 215, 46, 58, 215, 235, 139, 46, 175, 215),
"format": 34896613399,
"index_count": 240,
"index_data": PackedByteArray(0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 11, 0, 12, 0, 13, 0, 14, 0, 15, 0, 16, 0, 17, 0, 18, 0, 19, 0, 20, 0, 21, 0, 22, 0, 23, 0, 24, 0, 25, 0, 26, 0, 27, 0, 28, 0, 29, 0, 30, 0, 31, 0, 32, 0, 33, 0, 34, 0, 35, 0, 36, 0, 37, 0, 38, 0, 39, 0, 40, 0, 41, 0, 42, 0, 43, 0, 44, 0, 45, 0, 46, 0, 47, 0, 48, 0, 49, 0, 50, 0, 51, 0, 52, 0, 53, 0, 54, 0, 55, 0, 56, 0, 57, 0, 58, 0, 59, 0, 60, 0, 61, 0, 62, 0, 63, 0, 64, 0, 65, 0, 66, 0, 67, 0, 68, 0, 69, 0, 70, 0, 71, 0, 72, 0, 73, 0, 74, 0, 75, 0, 76, 0, 77, 0, 78, 0, 79, 0, 80, 0, 81, 0, 82, 0, 83, 0, 84, 0, 85, 0, 86, 0, 87, 0, 88, 0, 89, 0, 90, 0, 91, 0, 92, 0, 93, 0, 94, 0, 95, 0, 96, 0, 97, 0, 98, 0, 99, 0, 100, 0, 101, 0, 102, 0, 103, 0, 104, 0, 105, 0, 106, 0, 107, 0, 108, 0, 109, 0, 110, 0, 111, 0, 112, 0, 113, 0, 114, 0, 115, 0, 116, 0, 117, 0, 118, 0, 119, 0, 120, 0, 121, 0, 122, 0, 123, 0, 124, 0, 125, 0, 126, 0, 127, 0, 128, 0, 129, 0, 130, 0, 131, 0, 132, 0, 133, 0, 134, 0, 135, 0, 136, 0, 137, 0, 138, 0, 139, 0, 140, 0, 141, 0, 142, 0, 143, 0, 144, 0, 145, 0, 146, 0, 147, 0, 148, 0, 149, 0, 150, 0, 151, 0, 152, 0, 153, 0, 154, 0, 155, 0, 156, 0, 157, 0, 158, 0, 159, 0, 160, 0, 161, 0, 162, 0, 163, 0, 164, 0, 165, 0, 166, 0, 167, 0, 168, 0, 169, 0, 170, 0, 171, 0, 172, 0, 173, 0, 174, 0, 175, 0, 176, 0, 177, 0, 178, 0, 179, 0, 180, 0, 181, 0, 182, 0, 183, 0, 184, 0, 185, 0, 186, 0, 187, 0, 188, 0, 189, 0, 190, 0, 191, 0, 192, 0, 193, 0, 194, 0, 195, 0, 196, 0, 197, 0, 198, 0, 199, 0, 200, 0, 201, 0, 202, 0, 203, 0, 204, 0, 205, 0, 206, 0, 207, 0, 208, 0, 209, 0, 210, 0, 211, 0, 212, 0, 213, 0, 214, 0, 215, 0, 216, 0, 217, 0, 218, 0, 219, 0, 220, 0, 221, 0, 222, 0, 223, 0, 224, 0, 225, 0, 226, 0, 227, 0, 228, 0, 229, 0, 230, 0, 231, 0, 232, 0, 233, 0, 234, 0, 235, 0, 236, 0, 237, 0, 238, 0, 239, 0),
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 240,
"vertex_data": PackedByteArray(61, 185, 29, 19, 140, 167, 162, 179, 255, 127, 0, 0, 255, 127, 162, 179, 34, 106, 29, 19, 254, 191, 162, 179, 61, 185, 29, 19, 140, 167, 43, 187, 97, 225, 193, 70, 74, 195, 43, 187, 122, 242, 180, 60, 255, 127, 43, 187, 34, 106, 29, 19, 254, 191, 173, 189, 255, 127, 0, 0, 255, 127, 173, 189, 62, 57, 29, 19, 255, 127, 173, 189, 62, 57, 29, 19, 255, 127, 19, 225, 255, 127, 0, 0, 255, 127, 19, 225, 34, 106, 29, 19, 0, 64, 19, 225, 34, 106, 29, 19, 0, 64, 145, 245, 255, 127, 0, 0, 255, 127, 145, 245, 61, 185, 29, 19, 114, 88, 145, 245, 122, 242, 180, 60, 255, 127, 25, 183, 97, 225, 193, 70, 74, 195, 25, 183, 255, 255, 255, 127, 140, 167, 25, 183, 96, 163, 180, 60, 140, 231, 41, 143, 205, 90, 193, 70, 225, 236, 41, 143, 255, 127, 255, 127, 255, 255, 41, 143, 97, 35, 180, 60, 254, 191, 10, 179, 159, 7, 193, 70, 255, 127, 10, 179, 0, 0, 255, 127, 140, 167, 10, 179, 97, 35, 180, 60, 0, 64, 193, 228, 205, 90, 193, 70, 29, 19, 193, 228, 228, 48, 255, 127, 114, 24, 193, 228, 96, 163, 180, 60, 114, 24, 238, 232, 97, 225, 193, 70, 180, 60, 238, 232, 26, 207, 255, 127, 114, 24, 238, 232, 255, 255, 255, 127, 140, 167, 182, 166, 97, 225, 193, 70, 74, 195, 182, 166, 26, 207, 255, 127, 140, 231, 182, 166, 255, 127, 255, 127, 255, 255, 200, 141, 205, 90, 193, 70, 225, 236, 200, 141, 228, 48, 255, 127, 140, 231, 200, 141, 0, 0, 255, 127, 140, 167, 40, 192, 159, 7, 193, 70, 255, 127, 40, 192, 0, 0, 255, 127, 114, 88, 40, 192, 228, 48, 255, 127, 114, 24, 56, 243, 205, 90, 193, 70, 29, 19, 56, 243, 255, 127, 255, 127, 0, 0, 56, 243, 26, 207, 255, 127, 114, 24, 173, 217, 97, 225, 193, 70, 180, 60, 173, 217, 255, 255, 255, 127, 114, 88, 173, 217, 157, 220, 74, 195, 254, 191, 213, 167, 49, 165, 61, 185, 225, 236, 213, 167, 220, 149, 225, 236, 254, 191, 213, 167, 158, 92, 74, 195, 140, 231, 189, 166, 157, 30, 61, 185, 74, 195, 189, 166, 193, 70, 225, 236, 140, 167, 189, 166, 132, 13, 74, 195, 255, 127, 250, 207, 157, 30, 61, 185, 180, 60, 250, 207, 193, 70, 225, 236, 114, 88, 250, 207, 158, 92, 74, 195, 114, 24, 43, 255, 49, 165, 61, 185, 29, 19, 43, 255, 220, 149, 225, 236, 0, 64, 43, 255, 157, 220, 74, 195, 0, 64, 146, 209, 95, 248, 61, 185, 255, 127, 146, 209, 192, 198, 225, 236, 255, 127, 146, 209, 220, 149, 225, 236, 0, 64, 19, 225, 192, 198, 225, 236, 255, 127, 19, 225, 255, 127, 255, 255, 255, 127, 19, 225, 157, 220, 74, 195, 0, 64, 216, 221, 192, 198, 225, 236, 255, 127, 216, 221, 220, 149, 225, 236, 0, 64, 216, 221, 49, 165, 61, 185, 29, 19, 98, 231, 157, 220, 74, 195, 0, 64, 98, 231, 220, 149, 225, 236, 0, 64, 98, 231, 193, 70, 225, 236, 114, 88, 145, 245, 220, 149, 225, 236, 0, 64, 145, 245, 255, 127, 255, 255, 255, 127, 145, 245, 158, 92, 74, 195, 114, 24, 135, 244, 220, 149, 225, 236, 0, 64, 135, 244, 193, 70, 225, 236, 114, 88, 135, 244, 157, 30, 61, 185, 180, 60, 4, 233, 158, 92, 74, 195, 114, 24, 4, 233, 193, 70, 225, 236, 114, 88, 4, 233, 193, 70, 225, 236, 140, 167, 227, 205, 193, 70, 225, 236, 114, 88, 227, 205, 255, 127, 255, 255, 255, 127, 227, 205, 132, 13, 74, 195, 255, 127, 13, 200, 193, 70, 225, 236, 114, 88, 13, 200, 193, 70, 225, 236, 140, 167, 13, 200, 157, 30, 61, 185, 74, 195, 43, 187, 132, 13, 74, 195, 255, 127, 43, 187, 193, 70, 225, 236, 140, 167, 43, 187, 220, 149, 225, 236, 254, 191, 162, 179, 193, 70, 225, 236, 140, 167, 162, 179, 255, 127, 255, 255, 255, 127, 162, 179, 158, 92, 74, 195, 140, 231, 102, 167, 193, 70, 225, 236, 140, 167, 102, 167, 220, 149, 225, 236, 254, 191, 102, 167, 49, 165, 61, 185, 225, 236, 80, 158, 158, 92, 74, 195, 140, 231, 80, 158, 220, 149, 225, 236, 254, 191, 80, 158, 192, 198, 225, 236, 255, 127, 173, 189, 220, 149, 225, 236, 254, 191, 173, 189, 255, 127, 255, 255, 255, 127, 173, 189, 157, 220, 74, 195, 254, 191, 156, 180, 220, 149, 225, 236, 254, 191, 156, 180, 192, 198, 225, 236, 255, 127, 156, 180, 95, 248, 61, 185, 255, 127, 179, 185, 157, 220, 74, 195, 254, 191, 179, 185, 192, 198, 225, 236, 255, 127, 179, 185, 157, 220, 74, 195, 0, 64, 222, 207, 255, 255, 255, 127, 114, 88, 222, 207, 95, 248, 61, 185, 255, 127, 222, 207, 26, 207, 255, 127, 114, 24, 199, 217, 255, 255, 255, 127, 114, 88, 199, 217, 157, 220, 74, 195, 0, 64, 199, 217, 49, 165, 61, 185, 29, 19, 193, 228, 26, 207, 255, 127, 114, 24, 193, 228, 157, 220, 74, 195, 0, 64, 193, 228, 158, 92, 74, 195, 114, 24, 231, 253, 255, 127, 255, 127, 0, 0, 231, 253, 49, 165, 61, 185, 29, 19, 231, 253, 228, 48, 255, 127, 114, 24, 65, 243, 255, 127, 255, 127, 0, 0, 65, 243, 158, 92, 74, 195, 114, 24, 65, 243, 157, 30, 61, 185, 180, 60, 238, 232, 228, 48, 255, 127, 114, 24, 238, 232, 158, 92, 74, 195, 114, 24, 238, 232, 132, 13, 74, 195, 255, 127, 184, 203, 0, 0, 255, 127, 114, 88, 184, 203, 157, 30, 61, 185, 180, 60, 184, 203, 0, 0, 255, 127, 140, 167, 91, 192, 0, 0, 255, 127, 114, 88, 91, 192, 132, 13, 74, 195, 255, 127, 91, 192, 157, 30, 61, 185, 74, 195, 25, 183, 0, 0, 255, 127, 140, 167, 25, 183, 132, 13, 74, 195, 255, 127, 25, 183, 158, 92, 74, 195, 140, 231, 191, 155, 228, 48, 255, 127, 140, 231, 191, 155, 157, 30, 61, 185, 74, 195, 191, 155, 255, 127, 255, 127, 255, 255, 233, 142, 228, 48, 255, 127, 140, 231, 233, 142, 158, 92, 74, 195, 140, 231, 233, 142, 49, 165, 61, 185, 225, 236, 41, 143, 255, 127, 255, 127, 255, 255, 41, 143, 158, 92, 74, 195, 140, 231, 41, 143, 157, 220, 74, 195, 254, 191, 100, 159, 26, 207, 255, 127, 140, 231, 100, 159, 49, 165, 61, 185, 225, 236, 100, 159, 255, 255, 255, 127, 140, 167, 27, 167, 26, 207, 255, 127, 140, 231, 27, 167, 157, 220, 74, 195, 254, 191, 27, 167, 95, 248, 61, 185, 255, 127, 10, 179, 255, 255, 255, 127, 140, 167, 10, 179, 157, 220, 74, 195, 254, 191, 10, 179, 255, 127, 255, 127, 0, 0, 56, 243, 26, 207, 255, 127, 114, 24, 56, 243, 49, 165, 61, 185, 29, 19, 56, 243, 96, 163, 180, 60, 114, 24, 65, 243, 26, 207, 255, 127, 114, 24, 65, 243, 255, 127, 255, 127, 0, 0, 65, 243, 205, 90, 193, 70, 29, 19, 231, 253, 96, 163, 180, 60, 114, 24, 231, 253, 255, 127, 255, 127, 0, 0, 231, 253, 0, 0, 255, 127, 114, 88, 173, 217, 228, 48, 255, 127, 114, 24, 173, 217, 157, 30, 61, 185, 180, 60, 173, 217, 97, 35, 180, 60, 0, 64, 199, 217, 228, 48, 255, 127, 114, 24, 199, 217, 0, 0, 255, 127, 114, 88, 199, 217, 159, 7, 193, 70, 255, 127, 222, 207, 97, 35, 180, 60, 0, 64, 222, 207, 0, 0, 255, 127, 114, 88, 222, 207, 228, 48, 255, 127, 140, 231, 182, 166, 0, 0, 255, 127, 140, 167, 182, 166, 157, 30, 61, 185, 74, 195, 182, 166, 97, 35, 180, 60, 254, 191, 27, 167, 0, 0, 255, 127, 140, 167, 27, 167, 228, 48, 255, 127, 140, 231, 27, 167, 205, 90, 193, 70, 225, 236, 100, 159, 97, 35, 180, 60, 254, 191, 100, 159, 228, 48, 255, 127, 140, 231, 100, 159, 26, 207, 255, 127, 140, 231, 200, 141, 255, 127, 255, 127, 255, 255, 200, 141, 49, 165, 61, 185, 225, 236, 200, 141, 96, 163, 180, 60, 140, 231, 233, 142, 255, 127, 255, 127, 255, 255, 233, 142, 26, 207, 255, 127, 140, 231, 233, 142, 97, 225, 193, 70, 74, 195, 191, 155, 96, 163, 180, 60, 140, 231, 191, 155, 26, 207, 255, 127, 140, 231, 191, 155, 255, 255, 255, 127, 114, 88, 40, 192, 255, 255, 255, 127, 140, 167, 40, 192, 95, 248, 61, 185, 255, 127, 40, 192, 122, 242, 180, 60, 255, 127, 91, 192, 255, 255, 255, 127, 140, 167, 91, 192, 255, 255, 255, 127, 114, 88, 91, 192, 97, 225, 193, 70, 180, 60, 184, 203, 122, 242, 180, 60, 255, 127, 184, 203, 255, 255, 255, 127, 114, 88, 184, 203, 96, 163, 180, 60, 114, 24, 4, 233, 61, 185, 29, 19, 114, 88, 4, 233, 97, 225, 193, 70, 180, 60, 4, 233, 34, 106, 29, 19, 0, 64, 135, 244, 61, 185, 29, 19, 114, 88, 135, 244, 96, 163, 180, 60, 114, 24, 135, 244, 205, 90, 193, 70, 29, 19, 43, 255, 34, 106, 29, 19, 0, 64, 43, 255, 96, 163, 180, 60, 114, 24, 43, 255, 97, 35, 180, 60, 0, 64, 98, 231, 34, 106, 29, 19, 0, 64, 98, 231, 205, 90, 193, 70, 29, 19, 98, 231, 62, 57, 29, 19, 255, 127, 216, 221, 34, 106, 29, 19, 0, 64, 216, 221, 97, 35, 180, 60, 0, 64, 216, 221, 159, 7, 193, 70, 255, 127, 146, 209, 62, 57, 29, 19, 255, 127, 146, 209, 97, 35, 180, 60, 0, 64, 146, 209, 97, 35, 180, 60, 254, 191, 179, 185, 62, 57, 29, 19, 255, 127, 179, 185, 159, 7, 193, 70, 255, 127, 179, 185, 34, 106, 29, 19, 254, 191, 156, 180, 62, 57, 29, 19, 255, 127, 156, 180, 97, 35, 180, 60, 254, 191, 156, 180, 205, 90, 193, 70, 225, 236, 213, 167, 34, 106, 29, 19, 254, 191, 213, 167, 97, 35, 180, 60, 254, 191, 213, 167, 61, 185, 29, 19, 114, 88, 250, 207, 122, 242, 180, 60, 255, 127, 250, 207, 97, 225, 193, 70, 180, 60, 250, 207, 61, 185, 29, 19, 140, 167, 13, 200, 122, 242, 180, 60, 255, 127, 13, 200, 61, 185, 29, 19, 114, 88, 13, 200, 255, 127, 0, 0, 255, 127, 227, 205, 61, 185, 29, 19, 140, 167, 227, 205, 61, 185, 29, 19, 114, 88, 227, 205, 96, 163, 180, 60, 140, 231, 80, 158, 34, 106, 29, 19, 254, 191, 80, 158, 205, 90, 193, 70, 225, 236, 80, 158, 61, 185, 29, 19, 140, 167, 102, 167, 34, 106, 29, 19, 254, 191, 102, 167, 96, 163, 180, 60, 140, 231, 102, 167, 97, 225, 193, 70, 74, 195, 189, 166, 61, 185, 29, 19, 140, 167, 189, 166, 96, 163, 180, 60, 140, 231, 189, 166, 95, 35, 75, 107, 95, 35, 75, 107, 95, 35, 75, 107, 92, 99, 108, 61, 92, 99, 108, 61, 92, 99, 108, 61, 75, 41, 142, 198, 75, 41, 142, 198, 75, 41, 142, 198, 214, 61, 170, 233, 214, 61, 170, 233, 214, 61, 170, 233, 27, 120, 180, 57, 27, 120, 180, 57, 27, 120, 180, 57, 148, 114, 159, 37, 148, 114, 159, 37, 148, 114, 159, 37, 5, 49, 204, 115, 5, 49, 204, 115, 5, 49, 204, 115, 92, 92, 41, 226, 92, 92, 41, 226, 92, 92, 41, 226, 10, 100, 129, 242, 10, 100, 129, 242, 10, 100, 129, 242, 125, 130, 202, 22, 125, 130, 202, 22, 125, 130, 202, 22, 166, 114, 37, 20, 166, 114, 37, 20, 166, 114, 37, 20, 154, 87, 32, 221, 154, 87, 32, 221, 154, 87, 32, 221, 170, 113, 212, 248, 170, 113, 212, 248, 170, 113, 212, 248, 73, 119, 206, 254, 73, 119, 206, 254, 73, 119, 206, 254, 62, 124, 31, 11, 62, 124, 31, 11, 62, 124, 31, 11, 39, 208, 42, 50, 39, 208, 42, 50, 39, 208, 42, 50, 221, 196, 241, 180, 221, 196, 241, 180, 221, 196, 241, 180, 203, 155, 237, 203, 203, 155, 237, 203, 203, 155, 237, 203, 148, 135, 61, 215, 148, 135, 61, 215, 148, 135, 61, 215, 94, 177, 198, 14, 94, 177, 198, 14, 94, 177, 198, 14, 40, 194, 84, 22, 40, 194, 84, 22, 40, 194, 84, 22, 180, 182, 119, 18, 180, 182, 119, 18, 180, 182, 119, 18, 47, 174, 71, 17, 47, 174, 71, 17, 47, 174, 71, 17, 227, 135, 74, 198, 227, 135, 74, 198, 227, 135, 74, 198, 95, 134, 96, 209, 95, 134, 96, 209, 95, 134, 96, 209, 61, 131, 169, 216, 61, 131, 169, 216, 61, 131, 169, 216, 133, 165, 242, 180, 133, 165, 242, 180, 133, 165, 242, 180, 209, 159, 90, 192, 209, 159, 90, 192, 209, 159, 90, 192, 162, 156, 146, 194, 162, 156, 146, 194, 162, 156, 146, 194, 159, 220, 179, 148, 159, 220, 179, 148, 159, 220, 179, 148, 143, 214, 185, 155, 143, 214, 185, 155, 143, 214, 185, 155, 210, 229, 232, 130, 210, 229, 232, 130, 210, 229, 232, 130, 179, 214, 112, 57, 179, 214, 112, 57, 179, 214, 112, 57, 18, 204, 101, 50, 18, 204, 101, 50, 18, 204, 101, 50, 16, 188, 22, 42, 16, 188, 22, 42, 16, 188, 22, 42, 211, 154, 94, 4, 211, 154, 94, 4, 211, 154, 94, 4, 255, 143, 102, 5, 255, 143, 102, 5, 255, 143, 102, 5, 244, 155, 125, 13, 244, 155, 125, 13, 244, 155, 125, 13, 20, 136, 147, 230, 20, 136, 147, 230, 20, 136, 147, 230, 186, 129, 89, 243, 186, 129, 89, 243, 186, 129, 89, 243, 129, 125, 52, 233, 129, 125, 52, 233, 129, 125, 52, 233, 238, 147, 2, 225, 238, 147, 2, 225, 238, 147, 2, 225, 47, 138, 159, 235, 47, 138, 159, 235, 47, 138, 159, 235, 106, 141, 95, 218, 106, 141, 95, 218, 106, 141, 95, 218, 14, 182, 216, 207, 14, 182, 216, 207, 14, 182, 216, 207, 50, 173, 162, 203, 50, 173, 162, 203, 50, 173, 162, 203, 249, 206, 50, 140, 249, 206, 50, 140, 249, 206, 50, 140, 118, 184, 56, 29, 118, 184, 56, 29, 118, 184, 56, 29, 6, 156, 145, 18, 6, 156, 145, 18, 6, 156, 145, 18, 162, 163, 213, 29, 162, 163, 213, 29, 162, 163, 213, 29, 181, 136, 48, 1, 181, 136, 48, 1, 181, 136, 48, 1, 68, 126, 165, 12, 68, 126, 165, 12, 68, 126, 165, 12, 234, 119, 107, 25, 234, 119, 107, 25, 234, 119, 107, 25, 192, 131, 223, 244, 192, 131, 223, 244, 192, 131, 223, 244, 255, 111, 152, 250, 255, 111, 152, 250, 255, 111, 152, 250, 43, 101, 160, 251, 43, 101, 160, 251, 43, 101, 160, 251, 88, 141, 217, 235, 88, 141, 217, 235, 88, 141, 217, 235, 248, 99, 109, 237, 248, 99, 109, 237, 248, 99, 109, 237, 136, 71, 198, 226, 136, 71, 198, 226, 136, 71, 198, 226, 100, 168, 222, 34, 100, 168, 222, 34, 100, 168, 222, 34, 204, 82, 92, 52, 204, 82, 92, 52, 204, 82, 92, 52, 240, 73, 38, 48, 240, 73, 38, 48, 240, 73, 38, 48, 84, 142, 42, 7, 84, 142, 42, 7, 84, 142, 42, 7, 207, 117, 95, 20, 207, 117, 95, 20, 207, 117, 95, 20, 16, 108, 252, 30, 16, 108, 252, 30, 16, 108, 252, 30, 193, 124, 85, 39, 193, 124, 85, 39, 193, 124, 85, 39, 159, 121, 158, 46, 159, 121, 158, 46, 159, 121, 158, 46, 106, 120, 193, 40, 106, 120, 193, 40, 106, 120, 193, 40, 207, 81, 183, 238, 207, 81, 183, 238, 207, 81, 183, 238, 74, 73, 135, 237, 74, 73, 135, 237, 74, 73, 135, 237, 160, 78, 56, 241, 160, 78, 56, 241, 160, 78, 56, 241, 238, 67, 232, 213, 238, 67, 232, 213, 238, 67, 232, 213, 236, 51, 153, 205, 236, 51, 153, 205, 236, 51, 153, 205, 215, 47, 212, 205, 215, 47, 212, 205, 215, 47, 212, 205, 51, 100, 17, 52, 51, 100, 17, 52, 51, 100, 17, 52, 45, 96, 164, 63, 45, 96, 164, 63, 45, 96, 164, 63, 121, 90, 12, 75, 121, 90, 12, 75, 121, 90, 12, 75, 44, 26, 22, 125, 44, 26, 22, 125, 44, 26, 22, 125, 111, 41, 69, 100, 111, 41, 69, 100, 111, 41, 69, 100, 33, 59, 13, 75, 33, 59, 13, 75, 33, 59, 13, 75)
}]

[node name="GameScene" type="Node3D"]
script = ExtResource("1_1s41a")

[node name="PoolTable" parent="." instance=ExtResource("3_8ne0i")]

[node name="PlayableAreaCollision" type="Area3D" parent="PoolTable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0951779, 0)
collision_priority = 5.0
script = ExtResource("3_7pkmi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PoolTable/PlayableAreaCollision"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.492338, 0)
shape = SubResource("HeightMapShape3D_gydyj")

[node name="HoleCollisionDisabler" type="Area3D" parent="PoolTable"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0184973, 0, 0)
script = ExtResource("5_rf0n2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="PoolTable/HoleCollisionDisabler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.578383, -0.126104, 0.00652567)
shape = SubResource("SphereShape3D_63gom")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PoolTable/HoleCollisionDisabler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.535745, -0.127525, 0.0140528)
shape = SubResource("SphereShape3D_63gom")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="PoolTable/HoleCollisionDisabler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.515689, -0.126104, -0.9811)
shape = SubResource("SphereShape3D_63gom")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="PoolTable/HoleCollisionDisabler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.478521, -0.126104, -0.97625)
shape = SubResource("SphereShape3D_63gom")

[node name="CollisionShape3D6" type="CollisionShape3D" parent="PoolTable/HoleCollisionDisabler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.469723, -0.126104, 0.965725)
shape = SubResource("SphereShape3D_63gom")

[node name="CollisionShape3D7" type="CollisionShape3D" parent="PoolTable/HoleCollisionDisabler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.521354, -0.126104, 0.975743)
shape = SubResource("SphereShape3D_63gom")

[node name="BallArrayComponent" type="Node" parent="."]
script = ExtResource("4_7f1v5")

[node name="CueComponent" type="Node" parent="." node_paths=PackedStringArray("cameraNode", "cueBall")]
script = ExtResource("5_e2yek")
cameraNode = NodePath("../CanvasLayer/SubViewportContainer/SubViewport/Camera3D")
cueBall = NodePath("BallObject/CueBall")

[node name="BallObject" type="Node" parent="CueComponent" node_paths=PackedStringArray("cameraNode")]
script = ExtResource("5_0d3vu")
cameraNode = NodePath("../../CanvasLayer/SubViewportContainer/SubViewport/Camera3D")

[node name="CueBall" parent="CueComponent/BallObject" instance=ExtResource("4_lnexn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0703911, 0.575699)
max_contacts_reported = 100

[node name="PelotaBlanca" type="MeshInstance3D" parent="CueComponent/BallObject/CueBall"]
mesh = SubResource("ArrayMesh_3b3xh")

[node name="TurnComponent" type="Node" parent="."]
script = ExtResource("12_wiqqh")

[node name="GUIComponent" type="Node" parent="." node_paths=PackedStringArray("cueStickNode", "camera")]
script = ExtResource("13_syd34")
cueStickNode = NodePath("palo_pool")
camera = NodePath("../CanvasLayer/SubViewportContainer/SubViewport/Camera3D")

[node name="palo_pool" parent="GUIComponent" instance=ExtResource("10_j1a6t")]
rotation_order = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.998264
anchor_bottom = 1.00463
grow_horizontal = 2
grow_vertical = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1150, 651)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, 0.85, 0)
current = true
size = 1.5

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Light" type="Node3D" parent="."]

[node name="MainRoomLight" type="OmniLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00543043, 0.0158571)
light_energy = 0.207
shadow_enabled = true
shadow_bias = 0.0
shadow_blur = 0.0
omni_range = 10.353
omni_attenuation = 0.732043

[node name="RouleteLight" type="OmniLight3D" parent="Light"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.63089, 2.51148, -5.12746)
light_energy = 0.8
shadow_enabled = true
shadow_bias = 0.0
omni_attenuation = 0.732043

[connection signal="ball_exited_playable_area" from="PoolTable/PlayableAreaCollision" to="BallArrayComponent" method="ball_exited_playable_area"]
[connection signal="ball_exited_playable_area" from="PoolTable/PlayableAreaCollision" to="TurnComponent" method="_ball_scored"]
[connection signal="ball_entered_hole" from="PoolTable/HoleCollisionDisabler" to="BallArrayComponent" method="ball_entered_hole"]
[connection signal="cue_ball_clicked" from="CueComponent/BallObject" to="CueComponent" method="_on_cue_ball_clicked"]
[connection signal="body_entered" from="CueComponent/BallObject/CueBall" to="CueComponent/BallObject" method="_on_body_entered"]
